# gst_player

./: makefile  mediaPlayer.c
player_lib/: makefile  mediaPlayer.c  mediaPlayer.h
qt_gst_player/gst_player/: CMakeLists.txt  main.cpp  playerwindow.cpp  playerwindow.h  style.qss
qt_gst_player/gst_player/common/: common.cpp  common.h
qt_gst_player/gst_player/libs/: mediaPlayer.h
